se agrega entregable de Evaluador de calificación

--- a/ejercicio_JS.html
+++ b/ejercicio_JS.html
@@ -11,8 +11,8 @@
 
     <script>
         let operador = prompt("¿cual operación matemática vas a realizar? ('+' '-' '*' '/')");
-        let a = parseFloat( prompt("Primer parametro: ") );
-        let b = parseFloat( prompt("Segundo parametro: ") );
+        let num1 = parseFloat( prompt("Primer parametro: ") );
+        let num2= parseFloat( prompt("Segundo parametro: ") );
 
         let suma;
         let resta;
@@ -24,17 +24,17 @@
         }   else{
             
             if(operador == '+'){
-                suma = a + b;
+                suma = num1 + num2;
                 console.log( `Resultado de suma: ${suma}` );
             }else if(operador == '-'){
-                resta = a - b;
+                resta = num1 - num2;
                 console.log( `Resultado de resta: ${resta}` );
             }else if(operador == '*'){
-                multiplicacion = a * b;
+                multiplicacion = num1 * num2;
                 console.log(`Resultado de multiplicacion: ${multiplicacion}`);
             }else if(operador == '/'){
                 if(b !== 0){
-                    division = a/b;
+                    division = num1/num2;
                     console.log(`Resultado de division: ${division}`);
                 }else{
                     console.log("No se puede dividir entre 0");
