--- a/gestorTareas/index.html
+++ b/gestorTareas/index.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Tareas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    
 
+<body class="bg-light">
+    <div class="container py-5">
+        <h1 class="text-center mb-4">Gestor de Tareas</h1>
+        <div class = "row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header bg-black text-white">Añadir Tarea</div>
+                    <div class="card-body">
+                        <form id = "taskForm">
+                            <div class="mb-3">
+                                <label for = "taskTitle" class="form-label">Titulo</label>
+                                <input type="text" id="taskTitle" class="form-control" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="taskDescription" class="form-label">Descripcion</label>
+                                <textarea type="text" id="taskDescription" class="form-control" rows="3" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-warning w-100">Añadir Tarea</button>
+                        </form>
+                    </div>
+                </div>    
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header bg-warning">Lista de Tareas</div>
+                <div class="card-body">
+                    <ul id="taskList" class="list-group">
+                        <!-- AQUI ESTARAN LAS TAREAS -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
     <!-- Bootstrap JS -->
-     <script></script>
+     <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
      <!-- JS -->
       <script src="js/app.js"></script>
 </body>
